Fix excess padding was making inventory only two columns wide on browsers with wider scrollbars.

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@
     box-sizing: border-box;
 }
 .inventory {
-    padding: 4px;
+    padding-top: 4px;
+    padding-left: 4px;
     overflow-x: hidden;
     overflow-y: scroll;
     box-sizing: border-box;
